ad blog development blog

--- a/content/others/2020-07-29-blog-dev-4.md
+++ b/content/others/2020-07-29-blog-dev-4.md
@@ -1,9 +1,9 @@
 ---
-title: "开发日志[4]--用 Hugo + Netlify 重新建站"
+title: 开发日志[4]--用 Hugo + Netlify 重新建站
 date: 2020-07-29T15:38:04-05:00
 tags:
 - blog-development
-comments:true
+comments: true
 ---
 
 网站开了几年了，没写几篇文章，论原因的话忙和懒各占一半。最近腾出点时间，把网站用Hugo重新搭了一下，转到了Netlify上面。这么做也没啥特别的理由，主要是原来的网页设计有点看腻了。这个过程我一开始以为会很简单，不过还是多少折腾了一会儿。
