--- a/content/others/2020-07-29-blog-dev-4.md
+++ b/content/others/2020-07-29-blog-dev-4.md
@@ -10,18 +10,18 @@ comments: true
 
 首先当然就是把文章转移出来。这个我用的是自带的`hugo import jekyll`，没什么问题。
 
-接下来，我用最快的方法建了个新站，然后很单纯地把所有内容复制到原来Github Pages那个文件夹，以为这样就搞定了。后来看网站怎么也刷不出来，采取查了一下 —— 原来 Github Pages 使用的是 Jekyll，换 Hugo 的话接着用GP比较麻烦，大家都建议用 Netlify。唉，怎么不早说，早说我就不换了。不过事已至此了，还是赶紧继续吧。
+接下来，我用最快的方法建了个新站，然后很单纯地把所有内容复制到原来Github Pages那个文件夹，以为这样就搞定了。后来看网站怎么也刷不出来，才去查了一下 —— 原来 Github Pages 使用的是 Jekyll，换 Hugo 的话接着用GP比较麻烦，大家都建议用 Netlify。唉，怎么不早说，早说我就不换了。不过事已至此了，还是赶紧继续吧。
 
-Netlify 可以直接从Github repo里面同步，特别方便。唯一问题是原来github.io的后缀不能用了，我也没买域名，就用了自带的netlify.app，基本是出于薅羊毛的心态。这过程就开始出现问题了，一开始 Netlify deploy 不出来网页，总是各种报错，后来创建了个`netlify.toml`文件，里面把 Hugo version改了一下：
+Netlify 可以直接从Github repo里面同步，特别方便。唯一问题是原来github.io的后缀不能用了，我也没买域名，就用了自带的netlify.app，基本是出于薅羊毛的心态。这过程就开始出现问题了，一开始 Netlify deploy 不出来网页，总是各种报错，后来创建了个`netlify.toml`文件，里面把 Hugo version 改了一下：
 
 ```toml
 [context.production.environment]
  HUGO_VERSION = "0.74.0"
 ```
 
-这样改完网站倒是出来了，但是没有CSS，主题好像不能加载。不知道问题是啥，网上也是众说纷纭的，主流的说法是因为主题下载的时候应该用`git submodule` 而不是 `git clone` ，否则Netlify不能兼容。但是我依样画葫芦试了半天也不行。心情非常烦躁。
+这样改完网站倒是出来了，但是没有CSS，主题好像不能加载。不知道问题是啥，网上也是众说纷纭，主流的说法是因为下载主题的时候应该用`git submodule` 而不是 `git clone` ，否则Netlify不能兼容。但是我依样画葫芦试了半天也不行。心情非常烦躁。
 
-最后我查了半天，发现是低级错误：`baseURL` 那里我`https://`写成了`http://` —— 无语，没想到输在了这里。改完以后就可以看到排版了。
+最后我发现是低级错误：`baseURL` 那里我`https://`写成了`http://` —— 无语，没想到输在了这里。改完以后就可以看到排版了。
 
 我的模板是从这个 [仙人掌](https://github.com/monkeyWzr/hugo-theme-cactus) 改的，把`blockquote`部分弄得正常了一点，尤其是把那个不符合我审美的绿色给改了。说到这不得不吐槽一句，为什么好多模板都把`blockquote`写得这么夸张，好像引的都是什么名言佳句一样，还要单独用超大的字体，超居中的排版，明晃晃的引号或者什么别的图案，显示出这句话的与众不同 —— 而大多数时候，我们引用什么，不都是为了佐证我们自己要说的话吗？
 
